--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ViridEdge | Think | Innovate | Build</title>
+    <title>Think | Innovate | Build</title>
     <style>
         body {
             background-color: #0D1B0E; /* Dark Green */
@@ -18,7 +18,7 @@
             margin: 0;
         }
         img {
-            max-width: 300px;
+            max-width: 500px;
         }
         h1 {
             font-size: 2.5em;
@@ -44,7 +44,6 @@
 </head>
 <body>
     <img src="ViridEdge_Logo.png" alt="ViridEdge Logo">
-    <h1>ViridEdge</h1>
     <p>Think | Innovate | Build</p>
     <div class="links">
         <p>Contact: <a href="mailto:ali@viridedge.com">ali@viridedge.com</a></p>
