--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #0D1B0E; /* Dark Green */
-            color: #D4AF37; /* Gold */
+            color: #EAEAEA; /* Soft White */
             font-family: Arial, sans-serif;
             text-align: center;
             display: flex;
@@ -29,7 +29,7 @@
             margin: 10px 0;
         }
         a {
-            color: #D4AF37;
+            color: #D4AF37; /* Gold */
             text-decoration: none;
             font-weight: bold;
             margin: 10px;
