--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
             margin: 0;
         }
         img {
-            max-width: 500px;
+            max-width: 600px;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 3.5em;
             margin: 20px 0 10px;
         }
         p {
-            font-size: 1.2em;
+            font-size: 2em;
             margin: 10px 0;
         }
         a {
             color: #D4AF37; /* Gold */
             text-decoration: none;
             font-weight: bold;
+            font-size: 1.5em;
             margin: 10px;
         }
         a:hover {
@@ -40,10 +41,14 @@
         .links {
             margin-top: 20px;
         }
+        .spacer {
+            height: 60px;
+        }
     </style>
 </head>
 <body>
     <img src="ViridEdge_Logo.png" alt="ViridEdge Logo">
+    <div class="spacer"></div>
     <p>Think | Innovate | Build</p>
     <div class="links">
         <p>Contact: <a href="mailto:ali@viridedge.com">ali@viridedge.com</a></p>
